@@ -123,6 +123,13 @@ Build
 
 C API
 
+- A type can now inherit its metatype from its base type.  Previously,
+  when PyType_Ready() was called, if ob_type was found to be NULL, it
+  was always set to &PyType_Type; now it is set to base->ob_type,
+  where base is tp_base, defaulting to &PyObject_Type.
+
+- PyType_Ready() accidentally did not inherit tp_is_gc; now it does.
+
 - Objects allocated using the new PyMalloc_New and PyMalloc_NewVar
   functions will be allocated using pymalloc if it is enabled.  These
   objects should be deallocated using PyMalloc_Del.  The PyObject_{New,
